--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 
 # dependencies
 /node_modules
+
+# bun
+/bun.lockb
+/bun.lock
 
 # next.js
 /.next/
@@ -15,6 +19,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
 # env files
 .env*
@@ -25,3 +30,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# editors/OS
+.DS_Store
+.idea/
+.vscode/
+Thumbs.db
